132. squash: fix: padding and height
124. test: ProductCard padding block

125. fix: padding and height

126. fix: padding and height

127. fix: padding and height

128. fix: padding and height

130. fix: padding and height

129. fix: padding and height

131. fix: padding and height

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,7 +46,7 @@ body {
 }
 
 body {
-  height: 100vh;
+  height: 100dvh;
   height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
